--- a/translations.html
+++ b/translations.html
@@ -138,6 +138,6 @@
     </div>
   </div>
 
-  <script src="/js/translations.js"></script>
+  <script src="/translations.js"></script>
 </body>
 </html>
