--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="utf-8">
   <title>Управление переводами</title>
-  <script src="https://files.kaiten.ru/web-sdk/v1.min.js"></script>
   <style>
     body {
       background: transparent;
@@ -11,42 +10,32 @@
       padding: 0;
       font-family: 'Roboto', Arial, sans-serif;
     }
-    
-    .loading {
-      padding: 20px;
-      text-align: center;
-      color: #666;
-    }
-    
-    .error {
-      color: #ff4757;
-      padding: 10px;
-      background: #ffe6e6;
-      border-radius: 4px;
-      margin: 10px;
-    }
   </style>
 </head>
 <body>
-  <div id="status">
-    <div class="loading">Загрузка дополнения...</div>
-  </div>
-  
   <script>
-    // Проверяем загрузку SDK
-    setTimeout(() => {
-      if (!window.Addon) {
-        document.getElementById('status').innerHTML = `
-          <div class="error">
-            Ошибка: SDK Kaiten не загружен. Проверьте:<br>
-            1. Доступность https://files.kaiten.ru/web-sdk/v1.min.js<br>
-            2. Настройки CORS на сервере
-          </div>
-        `;
-      }
-    }, 3000);
+    // Проверяем, что мы в iframe Kaiten
+    if (window.parent !== window) {
+      // Загружаем SDK только если мы в iframe
+      const script = document.createElement('script');
+      script.src = 'https://files.kaiten.ru/web-sdk/v1.min.js';
+      script.onload = function() {
+        // Загружаем client.js после загрузки SDK
+        const clientScript = document.createElement('script');
+        clientScript.src = '/client.js';
+        document.head.appendChild(clientScript);
+      };
+      document.head.appendChild(script);
+    } else {
+      // Если мы не в iframe, показываем сообщение
+      document.body.innerHTML = `
+        <div style="padding: 20px; text-align: center;">
+          <h2>Kaiten Translations Addon</h2>
+          <p>Это дополнение предназначено для работы внутри Kaiten.</p>
+          <p>Откройте карточку в Kaiten чтобы использовать функционал.</p>
+        </div>
+      `;
+    }
   </script>
-  
-  <script src="/client.js"></script>
 </body>
 </html>
